--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-a
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8">
+<title>jvm参数生成器</title>
+</head>
+<body>
+基于java8+的jvm参数生成器
+
+<h1>基础设置</h1>
+1.是否开启日志：<input type="text" name="username">说明<br/>
+2.是否服务端模式：
+<label><input name="Fruit" type="radio" value="-server" />-server</label> 
+<label><input name="Fruit" type="radio" value="-client" />-client</label> 
+<label><input name="Fruit" type="radio" value="-XX:+TieredCompilation" />-XX:+TieredCompilation</label> 
+<label><input name="Fruit" type="radio" value="" />不设置</label>。说明：64位默认-server
+<br/>
+<h1>内存设置</h1>
+<br/>
+3.初始堆："-Xms1024m"<input type="text" name="username">请输入"1024m",或者"1g"这样的数字<br/>
+4.最大堆："-Xmx1024m"<input type="text" name="username">请输入"1024m",或者"1g"这样的数字<br/>
+
+</body>
+</html>
